--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start:prod": "cross-env NODE_ENV=production node src/server.js",
-    "start": "cross-env NODE_ENV=development nodemon src/server.js"
+    "start:prod": "cross-env NODE_ENV=production node ./index.js",
+    "start": "cross-env NODE_ENV=development nodemon ./index.js"
   },
   "keywords": [],
   "author": "Vladyslav Simak",
